# cookiecutter-fend

./: LICENSE  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .env.example  .gitignore  Makefile  docker-compose.yml
{{cookiecutter.project_name}}/backend/: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt
{{cookiecutter.project_name}}/backend/app/: __init__.py
{{cookiecutter.project_name}}/frontend/: Dockerfile
{{cookiecutter.project_name}}/frontend/src/pages/: index.tsx
{{cookiecutter.project_name}}/nginx/: nginx.conf
{{cookiecutter.project_name}}/{{cookiecutter.backend_app_name}}/: Dockerfile  README.md  requirements.txt
{{cookiecutter.project_name}}/{{cookiecutter.frontend_app_name}}/: .env.development  Makefile  package-lock.json  package.json
{{cookiecutter.project_name}}/{{cookiecutter.frontend_app_name}}/src/styles/: Home.module.css
